--- a/Front-End/eas.json
+++ b/Front-End/eas.json
@@ -12,7 +12,13 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "android": {
+    "buildType": "apk"
+  },
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://disasterappserver.onrender.com"
+      }
     }
   },
   "submit": {
